--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<title>Lab 1. Introduction to HTML5 and HLS</title>
+<title>Introduction to HTML5 and HLS</title>
 
 <link href="https://unpkg.com/video.js/dist/video-js.css" rel="stylesheet">
 
 </head>
 <body>
-  <h1>Pirmas multimediju laboras</h1>
+ 
   
 <div id="video_controls">
 
