--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+/<!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8"/>
-<title>Introduction to HTML5 and HLS</title>
+<title>Introduction to HTML5 and HLS </title>
 
 <link href="https://unpkg.com/video.js/dist/video-js.css" rel="stylesheet">
 
