--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
   	player.currentTime = player.currentTime-5;
 } 
 	function time() { 
-  	alert("Current time is: " + player.currentTime + "... nesuprantu kaip kita dali daryt...");
+  	alert("Current time is: " + player.currentTime + " :)");
 	player.pause();
 } 
 
